--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
   "license": "MIT",
   "scripts": {
     "dev": "parcel src/index.ts",
-    "build": "parcel build src/index.ts"
+    "build": "parcel build src/index.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@types/moment": "^2.13.0",
-    "moment": "^2.29.3",
+    "moment": "^2.29.3"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "jest": "^28.1.2",
     "parcel-bundler": "^1.12.5"
   }
 }
