--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "calendar-model",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Модель для вашего календаря",
   "main": "dist/index.js",
-  "author": "Kotaro",
+  "author": {
+    "name": "Kotaro",
+    "email": "swdevstudio@gmail.com",
+    "url": "https://github.com/SWDevStudio"
+  },
+  "bugs": {
+    "url": "https://github.com/SWDevStudio/calendar-model/issues"
+  },
   "license": "MIT",
   "scripts": {
     "dev": "parcel src/index.ts",
@@ -11,13 +18,13 @@
     "test": "jest"
   },
   "dependencies": {
-    "@types/moment": "^2.13.0",
     "moment": "^2.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/plugin-transform-modules-commonjs": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/moment": "^2.13.0",
     "jest": "^28.1.2",
     "parcel-bundler": "^1.12.5"
   }
