--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "deploy-npm": "yarn build && yarn publish"
   },
   "dependencies": {
+    "date-fns": "^2.28.0",
     "moment": "^2.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/plugin-transform-modules-commonjs": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^28.1.4",
     "@types/moment": "^2.13.0",
     "jest": "^28.1.2",
-    "parcel-bundler": "^1.12.5"
+    "parcel-bundler": "^1.12.5",
+    "typescript": "^4.7.4"
   }
 }
